fix social link on mobile

--- a/components/Follow.module.scss
+++ b/components/Follow.module.scss
@@ -17,15 +17,29 @@
   box-shadow: 8px 8px var(--dark);
 }
 
+.social {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  max-width: 500px;
+  margin: auto;
+  grid-gap: 3rem;
+}
+
+@media (max-width: 768px) {
+  .social {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 .social a {
+  place-self: center;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   background: #fff;
   font-size: 3rem;
-  margin: 0 1rem;
   height: 5rem;
-  width: 5rem;
+  width: 100%;
   border-radius: 5px;
   border: 4px solid var(--dark);
   box-shadow: 8px 8px var(--dark);
